# cerf

./: .buildinfo  .gitattributes  .gitignore  .python-version  CITATION.cff  DISCLAIMER  Dockerfile  LICENSE  MANIFEST.in  README.html  README.md  authors.html  cerf.data.html  cerf.html  cerf.process_inputs.html  cerf.tests.html  config.ini  contributing.html  environment.yml  footer.html  generalize.html  genindex.html  getting_started.html  header.html  how_to_cite.html  index.html  license.html  modules.html  objects.inv  publications.html  py-modindex.html  pyproject.toml  quickstarter.html  release_notes.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-ubuntu-18.04.yml  build.yml  docs.yml  linux.yml  osx.yml  publish-to-pypi.yml  test.yml  windows.yml
_modules/: index.html
_modules/cerf/: compete.html  install_supplement.html  interconnect.html  lmp.html  logger.html  model.html  nov.html  outputs.html  package_data.html  process.html  process_region.html  process_state.html  read_config.html  stage.html  utils.html
_sources/: cerf.process_inputs.rst.txt  cerf.rst.txt  cerf.tests.rst.txt  datasources.rst.txt  dependencies.rst.txt  getting_started.rst.txt  how_to_cite.rst.txt  index.rst.txt  license.rst.txt  publications.rst.txt  quickstarter.rst.txt  quickstarter2.rst.txt  release_notes.rst.txt  user_guide.rst.txt
cerf/: __init__.py  compete.py  config_reader.py  example.py  install_supplement.py  interconnect.py  lmp.py  logger.py  mod.py  model.py  nov.py  outputs.py  package_data.py  parallel.py  process.py  process_region.py  process_state.py  process_step.py  read_config.py  spatial_reader.py  stage.py  test.py  transmission.py  utils.py  workflow.py
cerf/data/: README.md  config_2010.yml  config_2030.yml  config_2050.yml  costs_gas_pipeline.yml  costs_per_kv_substation.yml  crs_usa_contiguous_albers_equal_area_conic.p  eia_natural_gas_pipelines_conus_albers.dbf  eia_natural_gas_pipelines_conus_albers.prj  eia_natural_gas_pipelines_conus_albers.shx  hifld_substations_conus_albers.dbf  hifld_substations_conus_albers.shp  hifld_substations_conus_albers.shx  package_data.py  state-abbrev_to_state-name.yml  state-name_to_state-id.yml  suitability_biomass.sgrd  suitability_biomass_igcc_ccs.sgrd  suitability_coal.sgrd  suitability_coal_igcc.sdat.aux.xml  suitability_coal_igcc.sgrd  suitability_coal_igcc_ccs.sgrd  suitability_gas_cc_ccs.sdat.aux.xml  suitability_wind.sgrd  technologies.yml
cerf/process_inputs/: process_expansion.py  process_utils.py
cerf/tests/: test_compete.py  test_lmp.py  test_nov.py  test_outputs.py  test_read_config.py  test_spatial_reader.py  test_utils.py
docs/: cerf.rst  conf.py  index.rst
docs/source/: authors.rst  cerf.process_inputs.rst  cerf.rst  conf.py  contributing.rst  footer.rst  getting_started.rst  how_to_cite.rst  index.rst  modules.rst  python_versions.rst  quickstarter.rst  release_notes.rst  user_guide.rst
doctrees/: cerf.data.doctree  cerf.process_inputs.doctree  contributing.doctree  footer.doctree  getting_started.doctree  install.doctree  license.doctree  modules.doctree  python_versions.doctree
example/: config.ini  example.py
example/inputs/: constants.xml  expansionplan.xml  powerzones.xml  states.xml  technologies.xml  technology_suitabilitymask_paths.xml
html/: .buildinfo  cerf.tests.html  getting_started.html  install.html  py-modindex.html  searchindex.js
html/_sources/: README.md.txt  getting_started.rst.txt
notebooks/: Untitled.ipynb  from_gcam.ipynb  process_spatial_data.ipynb  quickstarter.ipynb  run_cerf.ipynb  transmission.ipynb
paper/: paper.bib  paper.md
source/: modules.rst  tests.rst
tests/: _test_package_data.py  test_compete.py  test_interconnect.py  test_lmp.py  test_nov.py  test_package_data.py  test_read_config.py  test_spatial_reader.py
(+372 files in other folders)
