[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerf"
description = "An open-source geospatial Python package for assessing and analyzing future electricity technology capacity expansion feasibility."
readme = "README.md"
version = "2.4.0"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Chris Vernon", email = "chris.vernon@pnnl.gov"},
    {name = "Kendall Mongird", email = "kendall.mongird@pnnl.gov"},
    {name = "Nino Zuljevic", email = "nino.zuljevic@pnnl.gov"},

]
maintainers = [
    {name = "Chris Vernon", email = "chris.vernon@pnnl.gov"},
    {name = "Kendall Mongird", email = "kendall.mongird@pnnl.gov"},
]
dependencies = [
    'numpy>=1.19.4',
    'scipy>=1.12',
    'pyarrow>=17.0.0',
    'pandas>=1.1.4',
    'rasterio>=1.2.3',
    'rioxarray>=0.15',
    'PyYAML>=5.4.1',
    'requests>=2.25.1',
    'joblib>=1.0.1',
    'matplotlib>=3.3.3',
    'seaborn>=0.11.1',
    'fiona>=1.8.19',
    'pyproj>=3.0.1',
    'rtree>=0.9.7',
    'shapely>=1.7',
    'geopandas>=0.9.0',
]

classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12.1",
]
docs = [
    "setuptools>=57.0.0",
    "build>=0.5.1",
    "ipykernel>=6.15.1",
    "autodoc>=0.5.0",
    "nbsphinx~=0.8.6",
    "sphinx~=7.2.6",
    "sphinx-design~=0.5.0",
    "sphinx-rtd-theme~=2.0.0",
    "sphinx-mathjax-offline~=0.0.2",
    "sphinx-panels>=0.6.0",
]
deploy = [
    "twine>=4.0.1",
]

[project.urls]
Repository = "https://github.com/IMMM-SFA/cerf"
Documentation = "https://immm-sfa.github.io/cerf"

[tool.hatch.build]
packages = ["cerf"]  # set importable package name to "cerf"
include = ["cerf"]