[metadata]
name = cerf
version = 2.0.0
url = https://github.com/IMMM-SFA/cerf
license = BSD2-Clause
author = Chris R. Vernon; Nino Zuljevic
author_email = chris.vernon@pnnl.gov; nino.zuljevic@pnnl.gov
description = A Geospatial Model for Assessing Future Energy Technology Expansion Feasibility
long_description_content_type = text/markdown

install_requires = [
    'numpy==1.19.4',
    'pandas==1.1.4',
    'rasterio==1.2.3',
    'xarray==0.16.1',
    'PyYAML==5.4.1',
    'requests==2.25.1',
    'joblib==1.0.1',
    'matplotlib==3.3.3',
    'seaborn==0.11.1']

python_requires='>=3.7'

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD2-Clause
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data=True

[options.packages.find]
exclude =
    tests*
    testing*
